# ChangeLog for media-fonts/corefonts
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/corefonts/ChangeLog,v 1.29 2008/06/16 03:45:57 josejx Exp $

  16 Jun 2008; Joseph Jezak <josejx@gentoo.org> corefonts-1-r4.ebuild:
  Marked ppc stable.

  21 Mar 2008; Samuli Suominen <drac@gentoo.org> corefonts-1-r4.ebuild:
  amd64 stable

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> corefonts-1-r4.ebuild:
  Stable on ppc64

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> corefonts-1-r4.ebuild:
  alpha/ia64/sparc/x86 stable

*corefonts-1-r4 (10 Jul 2007)

  10 Jul 2007; Ryan Hill <dirtyepic@gentoo.org> -corefonts-1-r3.ebuild,
  +corefonts-1-r4.ebuild:
  Remove Tahoma font as the missing bold face is negatively affecting the font
  quality of common web pages and apps. Thanks to Peter Ansell for bug
  #184790.

*corefonts-1-r3 (24 Jun 2007)

  24 Jun 2007; Ryan Hill <dirtyepic@gentoo.org> +corefonts-1-r3.ebuild:
  Install the Tahoma font, which was previously omitted due to licensing
  issues. Thanks to Christoph Brill in Bug #141219.

  18 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> corefonts-1-r2.ebuild:
  Add ~x86-fbsd keyword.

  23 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>; -corefonts-1.ebuild,
  -corefonts-1-r1.ebuild:
  Get rid of ebuilds unported to modular X, breaking category-level commits.

  08 May 2005; Aron Griffis <agriffis@gentoo.org> corefonts-1-r2.ebuild:
  stable on ia64

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org> corefonts-1-r2.ebuild:
  Stable on amd64.

  14 Dec 2004; Markus Rothe <corsair@gentoo.org> corefonts-1-r2.ebuild:
  Stable on ppc64

  08 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> corefonts-1-r2.ebuild:
  Added to ~ppc-macos.

  04 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> corefonts-1-r2.ebuild:
  Stable on sparc
