@@ -10,6 +10,6 @@ DIST trebuc32.exe 357200 RMD160 4cc1485ac7662ff2c8b7ca7bd5e9dda5651a9f00 SHA1 50
 DIST verdan32.exe 351992 RMD160 bfb8b359e011186174e3ff22993f91a78f62ff30 SHA1 f5b93cedf500edc67502f116578123618c64a42a SHA256 c1cb61255e363166794e47664e2f21af8e3a26cb6346eb8d2ae2fa85dd5aad96
 DIST webdin32.exe 185072 RMD160 5382199cf8558228b13a0977d6254395070a9975 SHA1 2fb4a42c53e50bc70707a7b3c57baf62ba58398f SHA256 64595b5abc1080fba8610c5c34fab5863408e806aafe84653ca8575bed17d75a
 EBUILD corefonts-1-r2.ebuild 1204 RMD160 32d99c65d09ee025cd26aa07a167fd0ea161ec40 SHA1 d1e18d5545445f9855dc348cdcb8ecad603978a4 SHA256 d35c87dc177240daa3b3ead35c19e372b66fd7b07527e6596c53127f72b6e1e0
-EBUILD corefonts-1-r4.ebuild 1280 RMD160 740beed0105d15ee51b0f864ecd2564fbbb8182e SHA1 0244e29167863409b2fc5fad34082e0ccf0659e0 SHA256 9841fdc3ed2099a44db6b6f36ef446a297586b63ebb310bdb78167d04d1cd94b
-MISC ChangeLog 3765 RMD160 0002fd8f6fc81ae8315870534fe2ba62ff10c603 SHA1 2e1a2cdf030a42ee214d85fa576a403e63ada94e SHA256 d05baf4fb6250731e4174d956591d01e4346e4eecf430bb6519b4c8234713f35
+EBUILD corefonts-1-r4.ebuild 1279 RMD160 dbaac3e49c906e10b4e4b90bcab11652e3a912ef SHA1 43763df8b741d2ef65a1ae43b734df3b2e853c37 SHA256 3443746c7e2dd43af86412ffcf690b6bd084b885b6d10e64c826f3af49fe3f85
+MISC ChangeLog 3948 RMD160 fdc4ab239ae3e1e752e4cd8038e58f2d55da18fb SHA1 d24614302aaf948a76d7cd90e32852c09d1561f8 SHA256 d74b89962a0b3b62ef77d25fdd774783637cb8460c81942bc0a1007b105673e1
 MISC metadata.xml 158 RMD160 e563fdca0707ee5927deab77f2e5ef79816384ca SHA1 8e4ca6d183e52cdbea8cfba08b7a7910e648fc84 SHA256 9a8722fb0b5a1992b3942e85f23df4e08f10cabc2d783ca887479abe115b3ea8
